2016-07-22  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/version.h (PEG_LEVEL): Version 0.1.18.
	* src/tree.h: Rule_compile_c takes nolines argument for option -P.
	* src/compile.c, src/peg.c, src/leg.leg (main): Add option -P.
	Generate #line directives for all actions.
	* src/peg.1: Document option -P.

2016-07-14  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/version.h: 0.1.17

	* src/leg.leg: Remember line numbers for headers and trailer.
	Emit #line directives in the generated file.

2016-06-25  piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/version.h: 0.1.16

	* src/tree.[ch], src/compile.c, src/leg.leg: Add @-actions.

	* src/peg.1: Explain @-actions.

	* src/peg/peg-c, src/leg.c: Regenerate C source.

2013-12-18  piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/version.h: 0.1.15

	* src/compile.c: YY_FREE takes context and pointer as arguments.

	* YYRELEASE: Pass yyctx and pointer to YY_FREE.

2013-12-01  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/version.h: 0.1.14

	* src/peg.1: Fix several typos and escape backslashes (thanks to
	Giulio Paci).

	* LICENSE.txt: Replace "the the" with "the".

2013-08-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/compile.c: Predicate actions can refer to yytext (thanks to
	Gregory Pakosz).

	* src/leg.leg: Hexadecimal character escapes are supported by leg
	(thanks to Hugo Etchegoyen).

2013-07-20  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/getopt.c: Use BSD-licensed getopt() in Windows
	build.

	* src/compile.c: Verbose mode handles Variable nodes.

2013-06-03  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/leg.leg, src/compile.c: Add error actions via "~" operator.

	* src/compile.c: Support declaration of local variables at the top
	level of semantic actions.  Dynamically grow data structures to
	remove artificial limits on rule recursion (thanks to Alex