@@ -1,4 +1,4 @@
-/* A recursive-descent parser generated by peg 0.1.18 */
+/* A recursive-descent parser generated by peg 0.1.19 */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -75,6 +75,9 @@
 #endif
 #ifndef YYPARSE
 #define YYPARSE		yyparse
+#endif
+#ifndef YYPARSEFROM_R
+#define YYPARSEFROM_R	yyparsefrom_r
 #endif
 #ifndef YYPARSEFROM
 #define YYPARSEFROM	yyparsefrom
@@ -263,10 +266,10 @@ YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
   return yyleng;
 }
 
-YY_LOCAL(void) yyDone(yycontext *yy)
+YY_LOCAL(void) yyDone(yycontext *yy, int yythunkpos)
 {
   int pos;
-  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
+  for (pos= yythunkpos;  pos < yy->__thunkpos;  ++pos)
     {
       yythunk *thunk= &yy->__thunks[pos];
       int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
@@ -296,7 +299,7 @@ YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
     }
   else
     {
-      yyDone(yy);
+      yyDone(yy, 0);
       yyCommit(yy);
     }
   return 1;
@@ -1352,9 +1355,10 @@ YY_RULE(int) yy_grammar(yycontext *yy)
 
 typedef int (*yyrule)(yycontext *yy);
 
-YY_PARSE(int) YYPARSEFROM(YY_CTX_PARAM_ yyrule yystart)
+YY_PARSE(int) YYPARSEFROM_R(YY_CTX_PARAM_ yyrule yystart)
 {
-  int yyok;
+  int yyok, yythunkpos;
+  YYSTYPE *yyval;
   if (!yyctx->__buflen)
     {
       yyctx->__buflen= YY_BUFFER_SIZE;
@@ -1364,14 +1368,25 @@ YY_PARSE(int) YYPARSEFROM(YY_CTX_PARAM_ yyrule yystart)
       yyctx->__thunkslen= YY_STACK_SIZE;
       yyctx->__thunks= (yythunk *)YY_MALLOC(yyctx, sizeof(yythunk) * yyctx->__thunkslen);
       yyctx->__valslen= YY_STACK_SIZE;
-      yyctx->__vals= (YYSTYPE *)YY_MALLOC(yyctx, sizeof(YYSTYPE) * yyctx->__valslen);
+      yyctx->__val= yyctx->__vals= (YYSTYPE *)YY_MALLOC(yyctx, sizeof(YYSTYPE) * yyctx->__valslen);
       yyctx->__begin= yyctx->__end= yyctx->__pos= yyctx->__limit= yyctx->__thunkpos= 0;
     }
   yyctx->__begin= yyctx->__end= yyctx->__pos;
+  yythunkpos= yyctx->__thunkpos;
+  yyval= yyctx->__val;
+  yyok= yystart(yyctx);
+  if (yyok) yyDone(yyctx, yythunkpos);
+  yyctx->__thunkpos= yythunkpos;
+  yyctx->__val= yyval;
+  return yyok;
+}
+
+YY_PARSE(int) YYPARSEFROM(YY_CTX_PARAM_ yyrule yystart)
+{
+  int yyok;
   yyctx->__thunkpos= 0;
   yyctx->__val= yyctx->__vals;
-  yyok= yystart(yyctx);
-  if (yyok) yyDone(yyctx);
+  yyok= YYPARSEFROM_R(YY_CTX_ARG_ yystart);
   yyCommit(yyctx);
   return yyok;
 }
